; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_crypto-blackrock2.c_next_power_of_two.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_crypto-blackrock2.c_next_power_of_two.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @next_power_of_two to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @next_power_of_two(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 1, i64* %3, align 8
  %4 = load i64, i64* %2, align 8
  %5 = add i64 %4, 1
  store i64 %5, i64* %2, align 8
  br label %6

6:                                                ; preds = %11, %1
  %7 = load i64, i64* %3, align 8
  %8 = shl i64 1, %7
  %9 = load i64, i64* %2, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %6
  %12 = load i64, i64* %3, align 8
  %13 = add i64 %12, 1
  store i64 %13, i64* %3, align 8
  br label %6

14:                                               ; preds = %6
  %15 = load i64, i64* %3, align 8
  %16 = shl i64 1, %15
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
